[package]
name = "null_finder"
version = "1.0.0"
authors = ["Adam Lesperance <lespea@gmail.com>"]

[dependencies]
clap = "2.17"
crossbeam = "0.2"
csv = "0.14"
memchr = "0.1"
num_cpus = "1.1"
quick-csv = "0.1"
regex = "0.1"
walkdir = "0.1"
zip = "0.2"


[profile.release]
debug = false
rpath = false
lto   = true
panic = "abort"
opt-level = 3
debug-assertions = false
